--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,8 +13,9 @@
             'bower/normalize-css/normalize.css'
             'bower/fontawesome/css/font-awesome.css'
             '@ArchmageGameBundle/Resources/public/css/theme.css'
-            '@ArchmageGameBundle/Resources/public/css/style.css'
+            'bower/bootstrap-select/dist/css/bootstrap-select.css'
             'bower/datatables-bootstrap3-plugin/media/css/datatables-bootstrap3.css'
+            '@ArchmageGameBundle/Resources/public/css/style.css'
             %}
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
             <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css' />
@@ -53,6 +54,7 @@
             'bower/datatables/media/js/jquery.dataTables.js'
             'bower/datatables-bootstrap3-plugin/media/js/datatables-bootstrap3.js'
             'bower/bootstrap/dist/js/bootstrap.js'
+            'bower/bootstrap-select/dist/js/bootstrap-select.js'
             'bower/bootstrap-validator/js/validator.js'
 
         %}
