--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -13,7 +13,7 @@
         {% for troop in player.troops if troop.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
-                <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -23,9 +23,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ troop.unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.unit.manaMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldRecruit|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
