--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -14,7 +14,7 @@
         <div class="col-xs-12"><a name="introduccion"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo del juego</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <p>blabla</p>
                 </div>
             </div>
@@ -22,7 +22,7 @@
         <div class="col-xs-12"><a name="batallas"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Batallas</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <p>blabla</p>
                 </div>
             </div>
@@ -37,7 +37,7 @@
         <div class="col-xs-12 col-md-6"><a name="{{ faction.name|slug }}"></a>
             <div class="panel panel-{{ faction.class }}">
                 <div class="panel-heading text-center">{{ faction.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    {{ faction.slogan }}
+                    <i class="fa fa-fw fa-quote-left"></i>{{ faction.slogan }}<i class="fa fa-fw fa-quote-right"></i>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="col-xs-12 col-md-6"><a name="{{ building.name|slug }}"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">{{ building.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
@@ -100,7 +100,7 @@
         <div class="col-xs-12 col-md-6"><a name="{{ unit.name|slug }}"></a>
             <div class="panel panel-{{ unit.faction.class }}">
                 <div class="panel-heading text-center">{{ unit.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
@@ -133,7 +133,7 @@
         <div class="col-xs-12 col-md-6"><a name="{{ hero.name|slug }}"></a>
             <div class="panel panel-{{ hero.faction.class }}">
                 <div class="panel-heading text-center">{{ hero.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( hero.image ) }}">
@@ -161,7 +161,7 @@
         <div class="col-xs-12 col-md-6"><a name="{{ spell.name|slug }}"></a>
             <div class="panel panel-{{ spell.faction.class }}">
                 <div class="panel-heading text-center">{{ spell.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
@@ -190,13 +190,13 @@
         <div class="col-xs-12 col-md-6"><a name="{{ artifact.name|slug }}"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">{{ artifact.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <i class="fa fa-fw fa-joomla"></i> {{ artifact.description }}
+                            <i class="fa fa-fw fa-joomla"></i>{{ artifact.description }}
                         </div>
                     </div>
                 </div>
