--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -13,8 +13,8 @@
         {% for troop in player.troops if troop.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
-                <div class="panel-body">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
@@ -22,9 +22,9 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ troop.unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldRecruit|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
+                            <div class="col-xs-8"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
@@ -50,7 +50,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> algunas.
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-lg fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> algunas.
             </div>
         </div>
         {% endfor %}
