--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Economía</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i>Reino</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -31,7 +31,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Territorio</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i>Territorio</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -51,7 +51,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Magia</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i>Magia</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -71,7 +71,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Ejército</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i>Ejército</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -91,7 +91,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Defensa</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-shield"></i>Defensa</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -99,10 +99,10 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12">
-                                <i class="fa fa-fw fa-shield"></i><i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}">Hechizo de defensa</a>
+                                <i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path('archmage_game_home_help') }}">Hechizo de defensa</a>
                             </div>
                             <div class="col-xs-12">
-                                <i class="fa fa-fw fa-shield"></i><i class="fa fa-fw fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}">Artefacto de defensa</a>
+                                <i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}">Artefacto de defensa</a>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Social</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i>Cuenta</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
