--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -13,8 +13,8 @@
         {% for item in player.items if item.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
-                <div class="panel-body">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( item.artifact.image ) }}">
@@ -28,11 +28,8 @@
                     <form id="item{{ item.id }}" name="item{{ item.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_artifact') }}" method="post" role="form">
                         <div class="form-group">
                             <div class="input-group">
-                                <select class="form-control selectpicker" id="target" name="target" data-live-search="true">
+                                <select class="form-control selectpicker" id="target" name="target" data-live-search="true" data-size="5">
                                     <option>Objetivo</option>
-                                    {% for i in 1..100 %}
-                                        <option value="aa">dds</option>
-                                    {% endfor %}
                                     {% for target in targets %}
                                         <option value="{{ target.id }}">{{ target.nick }}</option>
                                     {% endfor %}
@@ -50,7 +47,7 @@
         </div>
         {% else %}
         <div class="col-xs-12 alert alert-danger text-center" role="alert">
-            <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
+            <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
         </div>
         {% endfor %}
     </div>
@@ -64,7 +61,9 @@
             if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
                 $('.selectpicker').selectpicker('mobile');
             } else {
-                $('.selectpicker').selectpicker();
+                $('.selectpicker').selectpicker({
+
+                });
             }
         });
     </script>
