--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -10,8 +10,8 @@
                 <h1><i class="fa fa-fw fa-tint"></i>Cargar maná<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-tint"></i> {{ player.mana|nf }}/{{ player.manaCap|nf }} maná</div>
-                <div class="panel-body">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-tint"></i>{{ player.mana|nf }}/{{ player.manaCap|nf }} maná</div>
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
@@ -26,7 +26,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Cargar</button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Cargar</button>
                                 </div>
                                 <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
