Modificado enchantment para tener owner y victim, modificado player para tener enchantments y curses.

--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -13,7 +13,7 @@
         {% for research in player.researchs if
             not research.active
             and research.spell.faction == player.faction
-            and research.spell.magic <= player.magic
+            and research.spell.magic <= 9999
         %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ research.spell.faction.class }}">
