--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-chain-broken"></i>Desencantar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
-        {% for enchantment in player.enchantments %}
+        {% for enchantment in player.curses %}{# player.enchantments #}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}">{{ enchantment.spell.name }}</a></div>
