--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -5,9 +5,26 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-md-offset-2 col-md-8 col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-flag"></i>Atacar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i>Tropas</div>
+                <div class="panel-body text-responsive">
+                    Tropas
+                </div>
+                <div class="panel-footer text-center">
+                    <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post">
+                        <div class="form-group has-feedback">
+                            <div class="input-group">
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
