--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-chain-broken"></i>Desencantar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
-        {% for enchantment in player.curses %}{# player.enchantments #}
+        {% for enchantment in player.enchantments %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}">{{ enchantment.spell.name }}</a></div>
@@ -38,7 +38,7 @@
         </div>
         {% else %}
         <div class="col-xs-12 alert alert-danger text-center" role="alert">
-            <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes encantamientos en tu reino. Tal vez deberías <i class="fa fa-fw fa-lg fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
+            <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-lg fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
         </div>
         {% endfor %}
     </div>
