--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-joomla"></i>{{ spell.skill.description }}
+                    {{ spell.skill.description|raw }}
                 </div>
             </div>
         </div>
